--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@deriv/deriv-api": "^1.0.6",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
