--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "tsc",
     "start": "rm -rf dist && tsc && NODE_ENV=production node -r dotenv/config dist/main.js",
-    "dev": "NODE_ENV=development ts-node ./src/main.ts"
+    "dev": "NODE_ENV=development ts-node -r dotenv/config ./src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-cache": "^5.1.2"
   },
