--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es6",
+        "lib": ["ES2020.Promise"],
         "noImplicitAny": false,
         "allowJs": true,
         "moduleResolution": "node",
