--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.14",
+    "@types/mongodb": "^3.6.1",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.4.2",
     "jest-mock-extended": "^1.0.10",
     "nodemon": "^2.0.4",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
