--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "node-cron": "^2.0.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
